--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
       </article>
     </div>
       <div class="item">
-        <img src="./img/NY.JPG" class="card-image">
+        <img src="./img/yarrav.jpg" class="card-image">
         <article>
           <h1>Best Winery in Yarra Valley</h1>
           <p>Best Wineries in Yarra are Domaine Chandon, Yering Station, Punt Road, Zonzo for food and all the other ones I have not been to yet</p>
@@ -46,20 +46,20 @@
       </a>
     </div>
     <div class="item">
-      <img src="./img/sor.jpg" class="card-image">
+      <img src="./img/NY.JPG" class="card-image">
         <article>
-          <h1>Coding over 40</h1>
-          <p>We're awesome. You can hire us.</p>
-          <span>Hire me</span>
+          <h1>Learning to Code</h1>
+          <p>Learning to code at Coder Academy has been a great experience. I am proud of my accomplishments and dedication to the process. </p>
+          <span> Study at Coder Academy</span>
         </article>
       </a>
     </div>
     <div class="item">
-      <img src="./img/NY.JPG" class="card-image">
+      <img src="./img/melzoo.jpeg" class="card-image">
         <article>
-          <h1>How to make a Marketplace</h1>
-          <p>I need my clothes selling app back. It's called poshmark. I can't live without it. I need to create here in Australia.</p>
-          <span>Poshmark</span>
+          <h1>Melbourne Zoo</h1>
+          <p>We recently went to Melbourne Zoo and it is wonderful to see all the baby animals that have been born during Covid.</p>
+          <span>Melbourne Zoo</span>
         </article>
       </a>
     </div>
@@ -67,10 +67,21 @@
       <img src="./img/lhdog.jpg" class="card-imagek">
         <article>
           <h1>This is our dog Kinja</h1>
-          <span>He's a Hungarian Viszla. We get stopped all the time becuase he is so handsome.</span>
+          <p>He's a Hungarian Viszla. He is now 8 years old.</p>
+          <span>Pets</span>
         </article>
       </a>
     </div>
+    <div class="item">
+      <img src="./img/melre.jpeg" class="card-image">
+        <article>
+          <h1>Melbourne Real Estate</h1>
+          <p>Melbourne's real estate's mean housing price should reach $1 million by mid -2021. Predictions are there will be a 10% increase seen in February 2021.</p>
+          <span>Real Estate Boom</span>
+        </article>
+      </a>
+    </div>
+
   </div>
 </body>
 </html>
