--- a/projects.html
+++ b/projects.html
@@ -22,25 +22,21 @@
     <!-- card component, contains specific project -->
     <div class="pjbox">
       <div class="project">
-        <img src="./img/sor.jpg" class="pjimage">
-    <!-- This is a placeholder not containing any real projects yet -->
         <article>
-            <h1>My Simple Weather App</h1>
-            <p>This is a simple weather app I built.</p>
+            <h1>Terminal App Ruby</h1>
+            <p>https://github.com/nyoung504/Terminal_App</p>
         </article>
     </div>
     <div class="project">
-    <!-- This is a placeholder not containing any real projects yet -->
         <article>
-            <h1>This is an amazing app that made me $1 Billion dollars</h1>
-            <p>I made it.</p>
+            <h1>Marketplace App called Flossy</h1>
+            <p>https://github.com/nyoung504/flossy-app</p>
         </article>
     </div>
     <div class="project">
-    <!-- This is a placeholder not containing any real projects yet -->
         <article>
-            <h1>This was an App that lost me $100</h1>
-            <p>It all works out in the end</p>
+            <h1>Password Generator</h1>
+            <p>https://github.com/nyoung504/passwordgen</p>
         </article>
     </div>
   </div>
