--- a/projects.html
+++ b/projects.html
@@ -24,21 +24,21 @@
       <div class="project">
         <article>
             <h1>Terminal App Ruby</h1>
-            <p>This Terminal App keep track of my favorite tourist destinations in Melbourne, Victoria. I have preloaded 10 of my favorite destinations and the user can add their own using the preloaded data as inspiration.</p>
+            <p>This Terminal App keep track of my favorite tourist destinations in Melbourne, Victoria. I have preloaded 10 of my favorite destinations and the user can add their own using the preloaded data as inspiration. This is written in Ruby.</p>
             <span>https://github.com/nyoung504/Terminal_App</span>
         </article>
     </div>
     <div class="project">
         <article>
             <h1>Marketplace App called Flossy</h1>
-            <p>The purpose of my marketplace is to facilitate the buying and selling of lightly used fashion items like clothing, shoes, accessories and children’s wear. People who are into fashion tend to buy many items but only wear them a handful of times. Sometimes it could just be once if it’s a special occasion. With Flossy, a user will be able to buy or sell lightly used fashion items from other users of the app. </p>
+            <p>The purpose of my marketplace is to facilitate the buying and selling of lightly used fashion items like clothing, shoes, accessories and children’s wear. People who are into fashion tend to buy many items but only wear them a handful of times. Sometimes it could just be once if it’s a special occasion. With Flossy, a user will be able to buy or sell lightly used fashion items from other users of the app. This is run with Ruby on Rails.</p>
             <span>https://flossyapp789.herokuapp.com/</span>
         </article>
     </div>
     <div class="project">
         <article>
             <h1>Password Generator</h1>
-            <p>This is a simple password generator that is run in the terminal.</p>
+            <p>This is a simple password generator that is run in the terminal with Ruby code.</p>
             <span>https://github.com/nyoung504/passwordgen</span>
         </article>
     </div>
