--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <!--button to download resume-->
         <div class="link-group">
           <h2 class="heading2">View Resume</h2>
-          <a href="https://drive.google.com/file/d/1iKpkL1ywy21CFaggOMJ9Mgb85aa9AMnI" target="_blank" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
+          <a href="https://drive.google.com/file/d/1FbxOOeHS9_d97N2VCQ2EYdlvRsorWR8T/view?usp=sharing" target="_blank" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
         </div>
         <!--Link to Github-->
         <div class="link-group">
